word-wrap long categories - fixes #204

--- a/style.css
+++ b/style.css
@@ -1928,6 +1928,7 @@ body:not(.search-results) .entry-summary > :last-child,
 
 .entry-footer a {
 	color: #757575;
+	word-wrap: break-word;
 }
 
 .entry-footer a:hover,
